# siminput-firmware-updater

./: .gitignore  LICENSE  README.md  entry.py  pyproject.toml  siminput-updater.spec
.github/workflows/: release.yml
src/siminput_updater/: __main__.py  app.py  config_model.py  device.py  firmware.py  mock_device.py  operations.py  ui_theme.py
src/siminput_updater/pages/: configure_page.py  device_page.py  update_page.py
src/siminput_updater/widgets/: axis_bar.py  button_grid.py  overlay.py  rule_editor.py
