[project]
name = "siminput-updater"
version = "1.0.1"
description = "Desktop configurator and firmware updater for SIMINPUT modular button boxes"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Milo Speelman" }]
keywords = ["siminput", "button box", "sim racing", "flight sim", "circuitpython", "rp2040"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "customtkinter>=5.2.0",
    "pyserial>=3.5",
    "evdev>=1.7; sys_platform == 'linux'",
]

[project.urls]
Homepage = "https://siminput.com"
Repository = "https://github.com/Dirt-m/siminput-firmware-updater"
Issues = "https://github.com/Dirt-m/siminput-firmware-updater/issues"

[project.scripts]
siminput-updater = "siminput_updater.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/siminput_updater"]
